[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ddosint"
version = "1.0.0"
description = "DDoSia Intelligence CLI Tool - OSINT tool for querying DDoSia Monitor API"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "DDoSINT Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.28.0",
]

[project.scripts]
ddosint = "ddosint.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ddosint*"]

